# QMetaClass

./: CMakeLists.txt  README.md
cmake/: QMetaClassConfig.cmake.in
example/: CMakeLists.txt  main.cpp
global/: qconfig_p.h
include/: qobject.hpp  qtext.hpp
include/text/: qstringbuilder.h
io/: moc_qbuffer.cpp  moc_qfile.cpp  moc_qfiledevice.cpp  moc_qiodevice.cpp  moc_qsavefile.cpp  moc_qsettings.cpp  moc_qstandardpaths.cpp  moc_qtemporaryfile.cpp
itemmodels/: moc_qabstractitemmodel.cpp
platform/win64-msvc/: qplatformdefs.h
plugin/: moc_qfactoryloader_p.cpp  moc_qlibrary.cpp  moc_qpluginloader.cpp
qobject/: moc_qabstracteventdispatcher.cpp  moc_qcoreapplication.cpp  moc_qcoreevent.cpp  moc_qeventdispatcher_win_p.cpp  moc_qeventloop.cpp  moc_qmimedata.cpp  moc_qnamespace.cpp  moc_qobject.cpp  moc_qsocketnotifier.cpp  moc_qtranslator.cpp
serialization/: moc_qcborcommon.cpp  moc_qcborstreamreader.cpp  moc_qcborvalue.cpp  moc_qtextstream_p.cpp
test/: moc_main.cpp
text/: moc_qlocale.cpp
thread/: moc_qthread.cpp  moc_qthreadpool.cpp
time/: moc_qcalendar.cpp
tools/: moc_qcryptographichash.cpp
